solved the white space at the left of the page problem

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
     font-family: "Roboto", sans-serif;
     color: #333333;
     background-color: #ffffff;
@@ -6,4 +6,4 @@
     flex-direction: column;
     width: 100%;
     margin: 0;
-}
+} */
