--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -36,7 +36,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  padding: 2.5rem 1.25rem 1.25rem;
+  padding: 2.5rem  0rem;
   margin-bottom: 2rem;
 }
 @media screen and (max-width: 900px) {
